fixed gap at bottom of screen when items are added & added spotify link

--- a/files/styles.css
+++ b/files/styles.css
@@ -7,22 +7,22 @@
   -webkit-tap-highlight-color: transparent;
 }
 html {
-  height: 100%;
+  min-height: 100%;
 }
 body {
-  width: 100vw;
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   background-image: linear-gradient(rgb(0, 36, 53), rgb(53, 1, 66));
+  background-attachment: fixed;
 }
 main {
   padding-top: 20px;
   padding-bottom: 20px;
   width: 90%;
   max-width: 500px;
-  height: 90%;
   /* box-shadow: 0px 0px 25px rgba(135, 135, 135, 0.652); */
 
   display: flex;
